@@ -1,6 +1,8 @@
 Revision history for Spreadsheet-HTML
 
 0.31
+    - updated docs example tables
+    - added animate literal parameter
 
 0.30
     - added animate
